(fix): resolve some renaming errors I didn't catch
- initially named this jest-export, then jest-no-globals, and now
  jest-without-globals
  - NG -> WG and jest-export.esm.js are a result of that :/

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Explicitly import Jest globals",
   "main": "dist/index.js",
-  "module": "dist/jest-export.esm.js",
+  "module": "dist/jest-without-globals.esm.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist/"
