(hotfix/pkg): jest@"23-24" -> jest@"23 - 24"
- apparently the space is necessary or else it won't recognize ANY
  versions
  - probably bc "23-24" could be the name of a pre-release, though I
    don't believe that's valid SemVer

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "changelog": "changelog-maker"
   },
   "peerDependencies": {
-    "jest": "23-24"
+    "jest": "23 - 24"
   },
   "dependencies": {},
   "devDependencies": {
