--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@agilgur5/changelog-maker": "^3.0.0",
     "@types/jest": "^24.0.23",
-    "tsdx": "github:agilgur5/tsdx#dist",
+    "tsdx": "^0.12.3",
     "typescript": "^3.5.2"
   }
 }
